# cogitare

./: Cargo.toml  README.md
src/: data.rs  gru.rs  lib.rs  lr.rs  lstm.rs  model.rs  train.rs  transformers.rs
src/loss/: divergence.rs  kl_divergence.rs  mod.rs
src/models/: graph_transformer.rs  mod.rs  retro_mae.rs  tree_lstm.rs
