[package]
name = "imdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
burn = "0.8.0"
burn-autodiff = "0.8.0"
burn-wgpu = "0.8.0"
derive-new = "0.5.9"
itertools = "0.11.0"
serde = "1.0.185"
strum = { version = "0.25.0", features = ["derive"] }
strum_macros = "0.25.2"
tokenizers = "0.13.4"
