[package]
name = "imdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
burn = { version = "0.9.0", features = [ "ndarray" ]}
derive-new = "0.5.9"
itertools = "0.11.0"
serde = "1.0.185"
statrs = "0.16.0"
